--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@types/react": "^16.7.17",
     "@types/react-document-title": "^2.0.3",
     "@types/react-dom": "^16.0.11",
+    "@types/react-loadable": "^5.4.2",
     "@types/react-router-dom": "^4.3.1",
     "typescript": "^3.2.2"
   },
