--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
     "object-assign": "4.1.1",
+    "path-to-regexp": "^2.4.0",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "postcss-scss": "^1.0.3",
@@ -35,6 +36,7 @@
     "react-dev-utils": "^5.0.1",
     "react-document-title": "^2.0.3",
     "react-dom": "^16.6.3",
+    "react-loadable": "^5.5.0",
     "react-router-dom": "^4.3.1",
     "resolve": "1.6.0",
     "source-map-loader": "^0.2.1",
@@ -62,6 +64,7 @@
   "devDependencies": {
     "@types/jest": "^23.3.10",
     "@types/node": "^10.12.17",
+    "@types/path-to-regexp": "^1.7.0",
     "@types/react": "^16.7.17",
     "@types/react-document-title": "^2.0.3",
     "@types/react-dom": "^16.0.11",
