--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/classnames": "^2.2.6",
     "antd": "^3.11.2",
     "autoprefixer": "7.1.6",
     "babel-jest": "^22.1.0",
@@ -11,6 +12,7 @@
     "babel-preset-react-app": "^3.1.1",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
+    "classnames": "^2.2.6",
     "css-loader": "0.28.7",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
@@ -70,7 +72,8 @@
     "@types/react-dom": "^16.0.11",
     "@types/react-loadable": "^5.4.2",
     "@types/react-router-dom": "^4.3.1",
-    "typescript": "^3.2.2"
+    "typescript": "^3.2.2",
+    "typings-for-css-modules-loader": "^1.7.0"
   },
   "jest": {
     "collectCoverageFrom": [
