--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "postcss-scss": "^1.0.3",
     "precss": "^3.1.0",
     "promise": "8.0.1",
+    "query-string": "^6.2.0",
     "raf": "3.4.0",
     "react": "^16.6.3",
     "react-app-rewired": "^1.4.1",
@@ -65,13 +66,16 @@
   },
   "devDependencies": {
     "@types/jest": "^23.3.10",
+    "@types/mockjs": "^1.0.2",
     "@types/node": "^10.12.17",
     "@types/path-to-regexp": "^1.7.0",
+    "@types/query-string": "^6.1.1",
     "@types/react": "^16.7.17",
     "@types/react-document-title": "^2.0.3",
     "@types/react-dom": "^16.0.11",
     "@types/react-loadable": "^5.4.2",
     "@types/react-router-dom": "^4.3.1",
+    "mockjs": "^1.0.1-beta3",
     "typescript": "^3.2.2",
     "typings-for-css-modules-loader": "^1.7.0"
   },
