--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
     "extract-text-webpack-plugin": "3.0.2",
+    "fetch-mock": "^7.2.7",
     "file-loader": "0.11.2",
     "fork-ts-checker-webpack-plugin": "^0.2.8",
     "fs-extra": "3.0.1",
@@ -65,6 +66,7 @@
     "test": "node scripts/test.js --env=jsdom"
   },
   "devDependencies": {
+    "@types/fetch-mock": "^7.2.0",
     "@types/jest": "^23.3.10",
     "@types/mockjs": "^1.0.2",
     "@types/node": "^10.12.17",
