--- a/package.json
+++ b/package.json
@@ -41,7 +41,11 @@
     "react-document-title": "^2.0.3",
     "react-dom": "^16.6.3",
     "react-loadable": "^5.5.0",
+    "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
+    "redux": "^4.0.1",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "resolve": "1.6.0",
     "source-map-loader": "^0.2.1",
     "style-loader": "0.19.0",
@@ -76,7 +80,9 @@
     "@types/react-document-title": "^2.0.3",
     "@types/react-dom": "^16.0.11",
     "@types/react-loadable": "^5.4.2",
+    "@types/react-redux": "^6.0.11",
     "@types/react-router-dom": "^4.3.1",
+    "@types/redux-logger": "^3.0.6",
     "mockjs": "^1.0.1-beta3",
     "typescript": "^3.2.2",
     "typings-for-css-modules-loader": "^1.7.0"
