--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "babel-loader": "^7.1.2",
     "babel-plugin-import": "^1.7.0",
     "babel-preset-react-app": "^3.1.1",
+    "bizcharts": "^3.4.2",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
     "classnames": "^2.2.6",
     "css-loader": "0.28.7",
+    "dayjs": "^1.7.8",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
     "extract-text-webpack-plugin": "3.0.2",
@@ -25,6 +27,7 @@
     "jest": "22.4.2",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
+    "numeral": "^2.0.6",
     "object-assign": "4.1.1",
     "path-to-regexp": "^2.4.0",
     "postcss-flexbugs-fixes": "3.2.0",
@@ -74,6 +77,7 @@
     "@types/jest": "^23.3.10",
     "@types/mockjs": "^1.0.2",
     "@types/node": "^10.12.17",
+    "@types/numeral": "^0.0.25",
     "@types/path-to-regexp": "^1.7.0",
     "@types/query-string": "^6.1.1",
     "@types/react": "^16.7.17",
