--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jest": "22.4.2",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
+    "nprogress": "^0.2.0",
     "numeral": "^2.0.6",
     "object-assign": "4.1.1",
     "path-to-regexp": "^2.4.0",
@@ -78,6 +79,7 @@
     "@types/jest": "^23.3.10",
     "@types/mockjs": "^1.0.2",
     "@types/node": "^10.12.17",
+    "@types/nprogress": "^0.0.29",
     "@types/numeral": "^0.0.25",
     "@types/path-to-regexp": "^1.7.0",
     "@types/query-string": "^6.1.1",
