--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^1.1.16",
     "@antv/data-set": "^0.10.1",
     "@types/classnames": "^2.2.6",
     "antd": "^3.11.2",
